header-category fix shadows + gap

--- a/src/app/components/_layout/category-nav/category-nav.component.scss
+++ b/src/app/components/_layout/category-nav/category-nav.component.scss
@@ -3,8 +3,10 @@
 :host {
   display: block;
   position: sticky;
-  top: 49px;
+  top: 48px;
   z-index: 9;
+  padding-top: 1px;
+  background-color: $color-bg;
 
   @include on-tablet {
     top: 70px;
@@ -13,9 +15,11 @@
 
 .cat-nav {
   background-color: var(--color-icon);
-  margin-top: 1px;
   padding-block: 5px 10px;
   border-radius: 0 0 32px 32px;
+  box-shadow:
+    inset 0 1px 0 rgba(255, 255, 255, 0.12),
+    0 10px 24px rgba(0, 0, 0, 0.16);
 
   &__track {
     display: flex;
